Bug Fix
When we clicked retake quiz, the css was messed up.

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     width: 70%;
     margin: 32px auto;
     background-color: #fff;
-    padding: 10px 50px 50px 50px;
+    padding: 16px;
     border: 2px solid black;
     
 }
@@ -18,7 +18,9 @@ body {
     font-size: 60px;
     text-align: center;
     color: black;
-    padding: 2px 0px;
+    padding: 32px;
+    margin: 0px;
+    border-bottom: solid 1px #dbdbdb;
     
 }
  
@@ -26,6 +28,8 @@ body {
     color: #01BBFF;
     text-align: center;
     font-size: 30px;
+    margin: 0px;
+    padding: 32px;
 }
  
 .grid #question {
@@ -33,11 +37,13 @@ body {
     font-size: 30px;
     color: black;
     text-align: center;
-    margin: 32px;
+    padding: 32px;
+    margin: 0px;
 }
  
 .buttons {
     text-align: center;
+    padding-bottom: 32px;
 }
  
 .quiz-button:hover {
@@ -53,4 +59,9 @@ body {
 #progress {
     color: #2b2b2b;
     font-size: 18px;
+}
+
+.line {
+    border: 0;
+    border-bottom: solid 1px #dbdbdb;
 }
